--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,15 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  first_name: MyString
-  last_name: MyString
-  username: MyString
-  email: MyString
-  password_digest: MyString
+  first_name: Faker::Name.first_name
+  last_name: Faker::Name.last_name
+  username: Faker::Internet.user_name(1)
+  email: Faker::Internet.email(1)
+  password_digest: Faker::Internet.password
 
 two:
-  first_name: MyString2
-  last_name: MyString2
-  username: MyString2
-  email: MyString2
-  password_digest: MyString2
+  first_name: Faker::Name.first_name
+  last_name: Faker::Name.last_name
+  username: Faker::Internet.user_name(2)
+  email: Faker::Internet.email(2)
+  password_digest: Faker::Internet.password
