Add ability to create, update, destroy user

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,13 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  first_name: Faker::Name.first_name
-  last_name: Faker::Name.last_name
-  username: Faker::Internet.user_name(1)
-  email: Faker::Internet.email(1)
+  first_name: <%= Faker::Name.first_name %>
+  last_name: <%= Faker::Name.last_name %>
+  username: <%= Faker::Internet.user_name(1) %>
+  email: <%= Faker::Internet.email(1) %>
+  password_digest: <%= BCrypt::Password.create("Password") %>
 
 two:
-  first_name: Faker::Name.first_name
-  last_name: Faker::Name.last_name
-  username: Faker::Internet.user_name(2)
-  email: Faker::Internet.email(2)
+  first_name: <%= Faker::Name.first_name %>
+  last_name: <%= Faker::Name.last_name %>
+  username: <%= Faker::Internet.user_name(2) %>
+  email: <%= Faker::Internet.email(2) %>
+  password_digest: <%= BCrypt::Password.create("Password") %>
